<?xml version="1.0"?>
<package>
  <name>unknown_objects_segmentation</name>
  <version>0.0.0</version>
  <description>The unknown_objects_segmentation package</description>
  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
  <license>GNU GPL</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
